--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Natürliche Selektion</title>
+        <link rel="manifest" href="manifest.json"/>
         <link rel="stylesheet" type="text/css" href="styles.css"/>
         <script src="Chart.bundle.min.js"></script>
         <script src="script.js"></script>
         <script src="settings.js"></script>
         <script src="statistics.js"></script>
         <script src="ui.js"></script>
+        
+        <link rel="manifest" href="manifest.json"/>
+		<meta name="theme-color" content="#FFFFFF"/>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Stundenplan">
+		<link rel="apple-touch-icon" href="icon.svg">
     </head>
 
     <body>
