--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <input id="new_food_count_input" name="new_food_count_input" type="number" value="200"/>
                 </div>
 
-                <button class="primary" onclick="world.populate(); ui.popup.hide();">Ausführen</button>
+                <button class="primary" onclick="world.populate(); visualize(); ui.popup.hide();">Ausführen</button>
             </div>
 
 
