--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?49853989');
-      src: url('./font/fontello.eot?49853989#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?49853989') format('woff'),
-           url('./font/fontello.ttf?49853989') format('truetype'),
-           url('./font/fontello.svg?49853989#fontello') format('svg');
+      src: url('./font/fontello.eot?43096503');
+      src: url('./font/fontello.eot?43096503#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?43096503') format('woff'),
+           url('./font/fontello.ttf?43096503') format('truetype'),
+           url('./font/fontello.svg?43096503#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -301,6 +301,9 @@ body {
         <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-population">&#xe800;</i> <span class="i-name">icon-population</span><span class="i-code">0xe800</span></div>
         <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-time">&#xe801;</i> <span class="i-name">icon-time</span><span class="i-code">0xe801</span></div>
         <div class="the-icons span3" title="Code: 0xe802"><i class="demo-icon icon-statistics">&#xe802;</i> <span class="i-name">icon-statistics</span><span class="i-code">0xe802</span></div>
+        <div class="the-icons span3" title="Code: 0xe803"><i class="demo-icon icon-cancel">&#xe803;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe803</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf1de"><i class="demo-icon icon-parameters">&#xf1de;</i> <span class="i-name">icon-parameters</span><span class="i-code">0xf1de</span></div>
       </div>
     </div>
