--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="population_container" class="popup">
                 <div class="popup_header">
                     <h2>Population</h2>
-                    <button class="negative" onclick="ui.popup.hide();">X</button>
+                    <button class="negative icon-cancel" onclick="ui.popup.hide();"></button>
                 </div>
 
                 <div class="input_set">
@@ -78,7 +78,7 @@
             <div id="time_container" class="popup">
                 <div class="popup_header">
                     <h2>Time</h2>
-                    <button class="negative" onclick="ui.popup.hide();">X</button>
+                    <button class="negative icon-cancel" onclick="ui.popup.hide();"></button>
                 </div>
             
                 <div>
@@ -100,7 +100,7 @@
             <div id="parameters_container" class="popup">
                 <div class="popup_header">
                     <h2>Parameters</h2>
-                    <button class="negative" onclick="ui.popup.hide();">X</button>
+                    <button class="negative icon-cancel" onclick="ui.popup.hide();"></button>
                 </div>
                 
                 <div id="parameter_inputs_container"></div>
@@ -115,7 +115,7 @@
             <div id="statistics_container" class="popup">
                 <div class="popup_header">
                     <h2>Statistics</h2>
-                    <button class="negative" onclick="ui.popup.hide();">X</button>
+                    <button class="negative icon-cancel" onclick="ui.popup.hide();"></button>
                 </div>
             </div>
         </div>
