--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?43096503');
-      src: url('./font/fontello.eot?43096503#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?43096503') format('woff'),
-           url('./font/fontello.ttf?43096503') format('truetype'),
-           url('./font/fontello.svg?43096503#fontello') format('svg');
+      src: url('./font/fontello.eot?79960505');
+      src: url('./font/fontello.eot?79960505#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?79960505') format('woff'),
+           url('./font/fontello.ttf?79960505') format('truetype'),
+           url('./font/fontello.svg?79960505#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -304,6 +304,7 @@ body {
         <div class="the-icons span3" title="Code: 0xe803"><i class="demo-icon icon-cancel">&#xe803;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe803</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-settings">&#xe804;</i> <span class="i-name">icon-settings</span><span class="i-code">0xe804</span></div>
         <div class="the-icons span3" title="Code: 0xf1de"><i class="demo-icon icon-parameters">&#xf1de;</i> <span class="i-name">icon-parameters</span><span class="i-code">0xf1de</span></div>
       </div>
     </div>
