--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <div id="parameter_inputs_container"></div>
 
-            <div id="error_container"></div>
+            <div class="error_container"></div>
 
             <button class="primary" onclick="parameters_manager.save();">Validate and save</button>
         </div>
