--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <body>
         <header>
             <h1>Sinase!</h1>
+            <button class="icon-info" onclick="window.open('tutorial.txt');"></button>
             <button class="icon-settings" onclick="ui.popup.show('settings_container');"></button>
         </header>
 
