--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?79960505');
-      src: url('./font/fontello.eot?79960505#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?79960505') format('woff'),
-           url('./font/fontello.ttf?79960505') format('truetype'),
-           url('./font/fontello.svg?79960505#fontello') format('svg');
+      src: url('./font/fontello.eot?69370490');
+      src: url('./font/fontello.eot?69370490#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?69370490') format('woff'),
+           url('./font/fontello.ttf?69370490') format('truetype'),
+           url('./font/fontello.svg?69370490#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -305,6 +305,7 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-settings">&#xe804;</i> <span class="i-name">icon-settings</span><span class="i-code">0xe804</span></div>
+        <div class="the-icons span3" title="Code: 0xf129"><i class="demo-icon icon-info">&#xf129;</i> <span class="i-name">icon-info</span><span class="i-code">0xf129</span></div>
         <div class="the-icons span3" title="Code: 0xf1de"><i class="demo-icon icon-parameters">&#xf1de;</i> <span class="i-name">icon-parameters</span><span class="i-code">0xf1de</span></div>
       </div>
     </div>
