--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Sinase!</title>
+        <title>Sinase</title>
         <link rel="manifest" href="manifest.json"/>
         <link rel="stylesheet" type="text/css" href="styles.css"/>
         <link rel="stylesheet" type="text/css" href="fontello/css/fontello.css"/>
@@ -18,13 +18,13 @@
 		<meta name="theme-color" content="#07B"/>
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="white">
-		<meta name="apple-mobile-web-app-title" content="Sinase!">
+		<meta name="apple-mobile-web-app-title" content="Sinase">
 		<link rel="apple-touch-icon" href="icon.png">
     </head>
 
     <body>
         <header>
-            <h1>Sinase!</h1>
+            <h1>Sinase</h1>
             <button class="icon-info" onclick="window.open('tutorial.txt');"></button>
             <button class="icon-settings" onclick="ui.popup.show('settings_container');"></button>
         </header>
